TCHAP: fix tooltip color text dark mode

--- a/res/themes/tchap-dark/css/_tchap_custom.pcss
+++ b/res/themes/tchap-dark/css/_tchap_custom.pcss
@@ -20,7 +20,7 @@ div[data-floating-ui-portal][data-floating-ui-inert] * {
 
  /* TODO: remove when compound is fixed  */
 /* For tooltip hover, with grey background and black text */
-div[data-floating-ui-focusable][role="tooltip"] {
+div[data-floating-ui-focusable] {
     color: black;
     background-color: var(--cpd-color-gray-1000)
 }
